--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,50 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+header {
+    width: 100%;
+    /* border: 2px solid blue; */
+    margin-bottom: 2%;
+}
+header .container nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    padding: 5% 5% 5% 0%;
+    /* border: 2px solid red; */
+}
+header .container nav a{
+    color: black;
+    text-decoration: none;
+}
+.middle-content .boxes .box1{
+background-color: teal;
+}
+.middle-content .boxes .box2 {
+    background-color: gold;
+}
+.middle-content .boxes .box3 {
+    background-color: cadetblue;
+}
+.middle-content .boxes .box4 {
+    background-color: coral;
+}
+.middle-content .boxes .box5 {
+    background-color: crimson;
+}
+.middle-content .boxes .box6 {
+    background-color: forestgreen;
+}
+.middle-content .boxes .box7 {
+    background-color: darkorchid;
+}
+.middle-content .boxes .box8 {
+    background-color: hotpink;
+}
+.middle-content .boxes .box9 {
+    background-color: indigo;
+}
+.middle-content .boxes .box10 {
+    background-color: dodgerblue;
+}
