--- a/css/index.css
+++ b/css/index.css
@@ -144,10 +144,12 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* started indext sytylilng hear  */
+
 header {
     width: 100%;
-    /* border: 2px solid blue; */
-    margin-bottom: 2%;
+        margin-bottom: 2%;
 }
 header .container nav {
     display: flex;
@@ -155,8 +157,7 @@ header .container nav {
     align-items: flex-end;
     width: 100%;
     padding: 5% 5% 5% 0%;
-    /* border: 2px solid red; */
-}
+    }
 header .container nav a{
     color: black;
     text-decoration: none;
@@ -191,3 +192,6 @@ background-color: teal;
 .middle-content .boxes .box10 {
     background-color: dodgerblue;
 }
+
+/* started about styling here  */
+
