--- a/css/index.css
+++ b/css/index.css
@@ -216,8 +216,13 @@ h3 {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	border-top: 1px solid black;
-	border-bottom: 2px solid black;
 	padding-top: 4%;
 	width: 100%;
 	margin-top: 4%;
+}
+body .about-page .about-footer {
+    margin-top: 4%;   
+}
+.about-page .about-content {
+    padding: 2%;
 }
