--- a/css/index.css
+++ b/css/index.css
@@ -215,7 +215,7 @@ h3 {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	border-top: 1px solid black;
+	border-top: 1px dashed black;
 	padding-top: 4%;
 	width: 100%;
 	margin-top: 4%;
